dark mode correctly implemented

--- a/country.css
+++ b/country.css
@@ -2,12 +2,14 @@
     max-width: 1200px;
     margin-inline: auto;
     margin-top: 32px;
+    background-color: var(--background-color);
+    color: var(--text-color);
 }
 .back-button{
     padding: 6px 24px;
     border-radius: 4px;
-    box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.2);
-    cursor: pointer;
+    box-shadow: 0 0 8px 0 var(--shadow-color);
+    cursor: pointer;    
 }
 .country-details{
     display: flex;
@@ -42,6 +44,9 @@
     border-radius: 4px;
     box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.2);
     font-size: 14px;
+}
+.header-content p{
+    cursor: pointer;
 }
 
 @media (max-width:940px) {
