--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body{
     --background-color:white;
     --text-color:black;
     --element-color:white;
+    --shadow-color: rgba(0,0,0,0.2);
     margin: 0;
     font-family: Nunito, sans-serif;
     background-color: var(--background-color);
@@ -14,6 +15,7 @@ body.dark{
     --background-color: #202c37;
     --text-color: white;
     --element-color: #2b3945;
+    --shadow-color: rgba(255,255,255,0.5);
 }
 main{
     padding: 24px;
@@ -52,6 +54,11 @@ a{
     flex-wrap: wrap;
     justify-content: space-between;
 }
+.countries-container a{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
 .country-card{
     display: inline-block;
     width: 250px;
@@ -67,7 +74,9 @@ a{
     box-shadow: 0 0 16px 0 rgba(0,0,0,0.2);
 }
 .country-card img{
+    max-height: 200px;
     width: 100%;
+    border: 1px solid #ddd;
 }
 .card-text{
     padding-inline: 16px;
@@ -119,11 +128,23 @@ a{
     width: 200px;
     padding: 16px;
     border: none;
-    outline: none; 
+    outline: none;  
+    background-color: inherit;
+    color: inherit;
+}
+.filter-container{
+    width: 250px;
     box-shadow: 0 0 8px 0 rgba(0,0,0,0.15);
-    border-radius: 4px;  
+    border-radius: 4px; 
     background-color: var(--element-color);
     color: var(--text-color);
+    display: flex;
+    align-items: center;
+    column-gap: 12px;
+}
+.reset{
+    padding: 16px;
+    flex-grow: 1;
 }
 @media(max-width:768px){
     .countries-container{
